# postpython

./: .gitignore  README.md  brainstorm_future.md  design-callable-params.md  mkdocs.yml  postscipy-roadmap.md  postyp.py  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: distribution.md  getting-started.md  index.md  postscipy.md  spec.md  toolchain.md
examples/: build_shared_lib.py  gaussian.py  gufunc_dot.py  gufunc_matmul.py  gufunc_norm.py  guvectorize_dot.py  guvectorize_matmul.py  guvectorize_norm.py  ufuncs_binary.py  ufuncs_ternary.py  ufuncs_unary.py
examples/ppdemo/: __init__.py  _kernels.py
examples/recipe/: recipe.yaml
post_py/: __init__.py  build.py  checker.py  cli.py  math.py  ufunc.py
post_py/compiler/: __init__.py  frontend.py  ir.py  typechecker.py
post_py/compiler/backend/: __init__.py  abi.py  c_backend.py  ext_module.py
postpyc/: build.py  checker.py  cli.py  ufunc.py
postpyc/compiler/: dimexpr.py  frontend.py  ir.py  typechecker.py
postpyc/compiler/backend/: abi.py  c_backend.py  ext_module.py
postpython/: __init__.py  build.py  checker.py  cli.py  gufunc.py  math.py  ufunc.py
postpython/compiler/: __init__.py  frontend.py  ir.py  typechecker.py
postpython/compiler/backend/: abi.py  c_backend.py  ext_module.py
postyp-dist/: README.md  postyp.py  pyproject.toml
ppspecial/: __init__.py  _bessel.py  _erf.py  _gamma.py  _stats.py
tests/: test_build_runtime.py  test_c_abi.py  test_c_backend_array_abi.py  test_checker.py  test_cli.py  test_compiler_annotations.py  test_compiler_array_layout.py  test_compiler_control_flow.py  test_compiler_expressions.py  test_compiler_profiles.py  test_compiler_semantics.py  test_cross_module.py  test_cross_module_inline.py  test_dimexpr.py  test_ext_module.py  test_fp_semantics.py  test_gufunc_runtime.py  test_gufunc_signature.py  test_init_manifest.py  test_module_constants.py  test_postyp.py  test_recipe_layout.py  test_shorthand_types.py  test_ufunc_signature.py  test_vectorize_decorators.py
tests/ppspecial/: test_bessel.py
